Elimina la entrada "*.class" duplicada del archivo .gitignore y añade "*.lst".

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Compiled source #
 ###################
 *.com
-*.class
 *.dll
 *.exe
 *.o
@@ -43,6 +42,7 @@ Thumbs.db
 
 # Java #
 ########
+*.lst
 *.class
 target/
 Registros
